--- a/pokedex_app/flutter_pokedex_app/pubspec.yaml
+++ b/pokedex_app/flutter_pokedex_app/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   dio: ^4.0.3
   flutter_screenutil: ^5.0.0+2
   google_fonts: ^2.1.0
+  cached_network_image: ^3.1.0+1
 
 dev_dependencies:
   flutter_test:
